fix(app): fix missing colors

--- a/www/app/schedule-filter/schedule-filter.scss
+++ b/www/app/schedule-filter/schedule-filter.scss
@@ -1,6 +1,6 @@
 
 .reset-filters {
-  color: color(danger);
+  color: map-get($colors, danger);
 }
 
 @each $track, $value in auxiliary-categories() {
