--- a/www/app/schedule/schedule.scss
+++ b/www/app/schedule/schedule.scss
@@ -1,5 +1,5 @@
 $categories: (
- ionic: color(primary),
+ ionic: map-get($colors, primary),
  angular: #AC282B,
  communication: #8E8D93,
  tooling: #FE4C52,
